// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile y huge 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 35;
  line-height: 35px;
}

.IS3 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS4 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "20px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
      role="heading"
    >
      This is tile headline
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
    >
      <div
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      >
        
        ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
        ...
      </div>
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile y medium 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 30;
  line-height: 30px;
}

.IS3 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS4 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "20px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
      role="heading"
    >
      This is tile headline
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
    >
      <div
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      >
        
        ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
        ...
      </div>
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile y wide 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 30;
  line-height: 30px;
}

.IS3 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS4 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "20px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
      role="heading"
    >
      This is tile headline
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
    >
      <div
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      >
        
        ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
        ...
      </div>
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile y without breakpoint should be like medium 1`] = `
<style>
.IS1 {
  margin-bottom: 0px;
}

.IS2 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 30;
  line-height: 30px;
}

.IS3 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS4 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "20px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
      role="heading"
    >
      This is tile headline
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
    >
      <div
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      >
        
        ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
        ...
      </div>
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;
